# mcp_services_radarr_sonarr

./: ARR_EXPANSION_PLAN.md  FEATURES.md  MCP_IMPLEMENTATION.md  README.md  ROADMAP.md  TRAKT_INTEGRATION.md  UPGRADE_SUMMARY.md  config.json.example  pyproject.toml  requirements.txt
radarr_sonarr_mcp/: config.py  server.py
radarr_sonarr_mcp/services/: jellyfin_service.py  lidarr_service.py  plex_service.py  radarr_service.py  sonarr_service.py  trakt_service.py
