[project]
name = "radarr-sonarr-mcp"
version = "2.1.0"
description = "FastMCP 2.0+ Server for Radarr, Sonarr, and Lidarr media management with Trakt/Jellyfin/Plex integration"
authors = [
  { name = "Berry", email = "berry@berry.com" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent"
]
keywords = ["mcp", "model-context-protocol", "radarr", "sonarr", "lidarr", "trakt", "jellyfin", "plex", "media", "ai", "llm", "music"]

[project.urls]
Homepage = "https://github.com/BerryKuipers/radarr-sonarr-mcp"
Documentation = "https://github.com/BerryKuipers/radarr-sonarr-mcp#readme"
Repository = "https://github.com/BerryKuipers/radarr-sonarr-mcp"
"Bug Tracker" = "https://github.com/BerryKuipers/radarr-sonarr-mcp/issues"

[project.scripts]
radarr-sonarr-mcp = "radarr_sonarr_mcp.cli:main"

dependencies = [
  "fastmcp>=2.0.0",
  "requests>=2.28.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["radarr_sonarr_mcp", "radarr_sonarr_mcp.services"]

[tool.setuptools.package-data]
radarr_sonarr_mcp = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=radarr_sonarr_mcp --cov-report=term-missing"
